<resources>
  <string name="app_name">TSocket</string>

  <string name="confirm">确认</string>
  <string name="cancel">取消</string>
  <string name="yes">确认</string>
  <string name="no">取消</string>
  <string name="back">返回</string>
  <string name="title_activity_device_list">DeviceListActivity</string>
  <string name="language_en">English</string>
  <string name="language_zh">中文</string>
  <string name="text_language">语言</string>
  <string name="text_setting">设置</string>
  <string name="text_change_name">修改名字</string>
  <string name="text_help">帮助</string>
  <string name="text_change_psd">修改密码</string>
  <string name="text_input_password">请输入密码</string>
  <string name="text_input_password_verify">请输入确认密码</string>
  <string name="text_oldName">旧名字:%s</string>
  <string name="text_input_name">输入新名字</string>
  <string name="text_minute">分钟</string>
  <string name="text_delay">延时</string>
  <string name="text_finish">完成</string>
  <string name="text_timer">定时</string>
  <string name="text_timer_start">开始时间</string>
  <string name="text_timer_end">结束时间</string>
  <string name="text_delay_start">循环开</string>
  <string name="text_delay_end">关</string>
  <string name="text_week_1">一</string>
  <string name="text_week_2">二</string>
  <string name="text_week_3">三</string>
  <string name="text_week_4">四</string>
  <string name="text_week_5">五</string>
  <string name="text_week_6">六</string>
  <string name="text_week_7">日</string>
  <string name="timer_recycle">每周/重复</string>
  <string name="text_delay_minute">%02d分钟</string>
  <string name="text_adapter_timer">%1$s - %2$s</string>
  <string name="text_adapter_recyclestr">循环 ON %1$s - OFF %2$s</string>
  <string name="text_adapter_week">重复: %1$s</string>
  <string name="toast_timer_week_notnull">每周重复至少应选择一天</string>
  <string name="toast_timer_timerErr">关闭时间要大于开启时间</string>
  <string name="toast_delay_min_error">循环时间不能低于5秒</string>
  <string name="toast_linking">连接中...</string>
  <string name="toast_linked">连接成功</string>
  <string name="toast_name_tolong">名字太长</string>
  <string name="toast_name_enmpty">名字不能为空</string>
  <string name="toast_psd_notequals">密码不一致</string>
  <string name="toast_timer_max">最多可以设置10组定时</string>
  <string name="toast_password_min6">设备密码只允许为6位</string>
  <string name="toast_linkLost">连接失败</string>
  <string name="toast_no_bond">请先配对设备</string>
  <string name="toast_bond_fail">配对失败</string>
  <string name="toast_timer_conflict">时间设置有冲突</string>
</resources>
