<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:HeaderLayout="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <tsocket.zby.com.tsocket.view.HeaderLayout
      android:id="@+id/layout_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      HeaderLayout:textTitle="@string/text_change_name"/>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/et_name"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_input_password"/>

    <EditText
        android:id="@+id/et_name_new"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_input_name"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btn_confirm"/>

  </LinearLayout>



</LinearLayout>
