<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:HeaderLayout="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_activity"
              android:orientation="vertical">

  <tsocket.zby.com.tsocket.view.HeaderLayout
      android:id="@+id/layout_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      HeaderLayout:textTitle="@string/text_setting" />

  <RelativeLayout
      android:id="@+id/layout_changeName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      style="@style/layout_select">

    <TextView
        android:id="@+id/tv_change_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/text_change_name"
        style="@style/text_normal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:background="@mipmap/img_right" />
  </RelativeLayout>

  <include layout="@layout/view_line"/>

  <RelativeLayout
      android:id="@+id/layout_changePsd"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/layout_select">

    <TextView
        android:id="@+id/tv_changePsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/text_change_psd"
        style="@style/text_normal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:background="@mipmap/img_right" />
  </RelativeLayout>

  <include layout="@layout/view_line"/>

  <RelativeLayout
      android:id="@+id/layout_help"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/layout_select">

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/text_help"
        style="@style/text_normal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:background="@mipmap/img_right" />
  </RelativeLayout>

  <include layout="@layout/view_line"/>

  <RelativeLayout
      android:id="@+id/layout_language"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/layout_select">

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/text_language"
        style="@style/text_normal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:background="@mipmap/img_right" />
  </RelativeLayout>

  <include layout="@layout/view_line"/>


</LinearLayout>
