<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:HeaderLayout="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <tsocket.zby.com.tsocket.view.HeaderLayout
      android:id="@+id/layout_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      HeaderLayout:textTitle="@string/text_change_psd" />


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical"
      android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/et_psd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/text_input_password"
        android:inputType="numberPassword"
        android:maxLength="6" />

    <EditText
        android:id="@+id/et_psd_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/text_input_password_verify"
        android:inputType="numberPassword"
        android:maxLength="6" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

      <Button
          android:id="@+id/btn_confirm"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/btn_confirm" />
    </LinearLayout>

  </LinearLayout>


</LinearLayout>
