<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

  <tsocket.zby.com.tsocket.view.HeaderLayout
      android:id="@+id/layout_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:textTitle="@string/text_timer" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <RelativeLayout
          android:id="@+id/layout_startTimer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/view_margin"
          android:paddingBottom="@dimen/view_margin"
          android:background="@drawable/layout_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_timer_start"
            style="@style/text_normal" />

        <TextView
            android:id="@+id/tv_timer_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/weekday_selectcolor"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="@dimen/layout_paddingTop"
            android:paddingBottom="@dimen/layout_paddingTop"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            style="@style/text_normal" />

      </RelativeLayout>

      <include layout="@layout/view_line"></include>

      <RelativeLayout
          android:id="@+id/layout_endTimer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/view_margin"
          android:paddingBottom="@dimen/view_margin"
          android:background="@drawable/layout_selector"
          android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_timer_end"
            android:layout_centerVertical="true"
            style="@style/text_normal" />

        <TextView
            android:id="@+id/tv_timer_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/weekday_selectcolor"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="@dimen/layout_paddingTop"
            android:paddingBottom="@dimen/layout_paddingTop"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            style="@style/text_normal" />

      </RelativeLayout>

      <include layout="@layout/view_line"></include>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/view_margin"
          android:paddingBottom="@dimen/view_margin"
          android:gravity="center_vertical"
          android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_delay_start"
            android:singleLine="true"
            android:ellipsize="end"
            style="@style/text_normal" />

        <TextView
            android:id="@+id/tv_delay_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/weekday_selectcolor"
            android:layout_marginLeft="@dimen/view_margin"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="@dimen/layout_paddingTop"
            android:paddingBottom="@dimen/layout_paddingTop"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            style="@style/text_normal" />

          </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_delay_end"
            android:ellipsize="end"
            style="@style/text_normal" />

        <TextView
            android:id="@+id/tv_delay_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/weekday_selectcolor"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="@dimen/layout_paddingTop"
            android:paddingBottom="@dimen/layout_paddingTop"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            style="@style/text_normal" />


        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cb_select"
            android:layout_gravity="right"
            android:button="@null" />

      </LinearLayout>

      <include layout="@layout/view_line"></include>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/timer_recycle"
          android:paddingTop="@dimen/layout_paddingTop"
          style="@style/text_normal" />

      <tsocket.zby.com.tsocket.view.WeekView
          android:id="@+id/weekView_value"
          android:layout_gravity="center_horizontal"
          android:paddingBottom="@dimen/layout_paddingTop"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

      <include layout="@layout/view_line"></include>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:gravity="center">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/confirm"
            style="@style/btn_confirm" />

      </LinearLayout>



    </LinearLayout>

  </LinearLayout>


</LinearLayout>
