<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:HeaderLayout="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <tsocket.zby.com.tsocket.view.HeaderLayout
      android:id="@+id/headerLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      HeaderLayout:leftIcon="@drawable/btn_blue"
      HeaderLayout:rightIcon="@drawable/btn_setting"
      HeaderLayout:showRight="true"
      HeaderLayout:textTitle="@string/app_name" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@mipmap/appbg"
      android:orientation="vertical">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingBottom="50dp"
        android:paddingTop="50dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:paddingTop="@dimen/activity_horizontal_margin"
          android:gravity="center">

        <TextView
            android:id="@+id/tv_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/btn_delay"
            android:gravity="center"
            android:text="@string/text_delay"
            style="@style/text_normal" />

      </LinearLayout>

      <CheckedTextView
          android:id="@+id/ctv_switch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/btn_switch" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/activity_horizontal_margin"
          android:layout_weight="1"
          android:gravity="center">

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/btn_timer"
            android:gravity="center"
            android:text="@string/text_timer"
            style="@style/text_normal" />
      </LinearLayout>
    </LinearLayout>

  </LinearLayout>
</LinearLayout>
